opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_typed_fields"
bug-reports: "https://github.com/janestreet/ppx_typed_fields/issues"
dev-repo: "git+https://github.com/janestreet/ppx_typed_fields.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_typed_fields/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.09.0"}
  "base"
  "core"
  "ppx_compare"
  "ppx_enumerate"
  "ppx_jane"
  "ppx_sexp_conv"
  "ppx_string"
  "sexplib"
  "sexplib0"
  "dune"          {>= "2.0.0"}
  "ppxlib"        {>= "0.26.0"}
]
synopsis: "GADT-based field accessors and utilities"
description: "
Part of the Jane Street's PPX rewriters collection.
"
