opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_typed_fields"
bug-reports: "https://github.com/janestreet/ppx_typed_fields/issues"
dev-repo: "git+https://github.com/janestreet/ppx_typed_fields.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_typed_fields/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "ppx_base"
  "ppx_compare"
  "ppx_enumerate"
  "ppx_pipebang"
  "ppx_sexp_conv"
  "ppx_sexp_message"
  "ppx_string"
  "ppxlib_jane"
  "sexplib"
  "sexplib0"
  "univ_map"
  "dune"             {>= "3.17.0"}
  "ppxlib"           {>= "0.33.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "GADT-based field accessors and utilities"
description: "
Part of the Jane Street's PPX rewriters collection.
"
